--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2.0.1 2022-04-20
+  - Rename the dataset
+  - Add preprocessed data
 2.0.0 2022-04-18
   - Re-organized data with .set files
   - Add EGI .mff rawdata
