--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+
 ﻿## Description
 
 This dataset was collected in 2020, which combining high-density Electroencephalography (HD-EEG, 128 channels) and mouse-tracking intended as a resource for examining the dynamic decision process of semantics and preference choices in the human brain. The dataset includes high-density resting-state and task-related (food preference choices and semantic judgements) EEG acquired from 31 individuals (ages: 18–33).
@@ -8,11 +9,10 @@ The EEG data were acquired using a 128-channel cap based on the standard 10/20 S
 
 ## Others
 
-Please refer to the corresponding paper and code to get more details.
+Please refer to the corresponding paper and [GitHub code](https://github.com/andlab-um/MT-EEG-dataset) to get more details.
 
 ## References
 
 Appelhoff, S., Sanderson, M., Brooks, T., Vliet, M., Quentin, R., Holdgraf, C., Chaumon, M., Mikulan, E., Tavabi, K., Höchenberger, R., Welke, D., Brunner, C., Rockhill, A., Larson, E., Gramfort, A. and Jas, M. (2019). MNE-BIDS: Organizing electrophysiological data into the BIDS format and facilitating their analysis. Journal of Open Source Software 4: (1896). https://doi.org/10.21105/joss.01896
 
 Pernet, C. R., Appelhoff, S., Gorgolewski, K. J., Flandin, G., Phillips, C., Delorme, A., Oostenveld, R. (2019). EEG-BIDS, an extension to the brain imaging data structure for electroencephalography. Scientific Data, 6, 103. https://doi.org/10.1038/s41597-019-0104-8
-
