--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-
-# Description
+# A resource for assessing dynamic binary choices in the adult brain using EEG and mouse-tracking
 
 This dataset was collected in 2020, which combines high-density Electroencephalography (HD-EEG, 128 channels) and mouse-tracking intended as a resource for examining the dynamic decision process of semantics and preference choices in the human brain. The dataset includes high-density resting-state and task-related (food preference choices and semantic judgments) EEG acquired from 31 individuals (ages: 18–33).
 
