--- a/README
+++ b/README
@@ -12,7 +12,7 @@ The EEG data were acquired using a 128-channel cap based on the standard 10/20 S
 
 **`sub-*`**: EEG (`.set`) and behavior data with BIDS format.
 
-**`sourcedata/rawdata`**: Raw `.mff` EGI data with subject information desensitization.
+**`sourcedata/rawdata`**: Raw `.mff` EGI data and behavior data with subject information desensitization.
 
 **`sourcedata/psychopy`**: Stimuli and PsychoPy scripts for presentation.
 
