[OpenNeuro] Recorded changes

--- a/README
+++ b/README
@@ -20,9 +20,11 @@ The EEG data were acquired using a 128-channel cap based on the standard 10/20 S
 
 ## Others
 
-Please refer to the corresponding paper and [GitHub code](https://github.com/andlab-um/MT-EEG-dataset) to get more details.
+Please refer to the [corresponding paper](https://doi.org/10.1038/s41597-022-01538-5) and [GitHub code](https://github.com/andlab-um/MT-EEG-dataset) to get more details.
 
 ## References
+
+Chen, K., Wang, R., Huang, J., Gao, F., Yuan, Z., Qi, Y., & Wu, H. (2022). A resource for assessing dynamic binary choices in the adult brain using EEG and mouse-tracking. Scientific Data, 9(1), 416. https://doi.org/10.1038/s41597-022-01538-5
 
 Appelhoff, S., Sanderson, M., Brooks, T., Vliet, M., Quentin, R., Holdgraf, C., Chaumon, M., Mikulan, E., Tavabi, K., Höchenberger, R., Welke, D., Brunner, C., Rockhill, A., Larson, E., Gramfort, A. and Jas, M. (2019). MNE-BIDS: Organizing electrophysiological data into the BIDS format and facilitating their analysis. Journal of Open Source Software 4: (1896). https://doi.org/10.21105/joss.01896
 
